# htmx_mockup_w_websockets

./: .env  .gitignore  Dockerfile  Dockerfile_prod  README.md  collect.py  db.sqlite3  docker-compose.yaml  main.py  manage.py  pyproject copy.toml  pyproject.toml  requirements.txt  todo.txt
core/: admin.py  consumers.py  dcap_models.py  models.py  routing.py  urls.py  views.py
core/libs/swimlane/: extract.py  transform.py
core/migrations/: 0001_initial.py  0002_serializemaster.py  0003_inspectionmaster.py  0004_alter_inspectionmaster_run_number_and_more.py  0005_coresmasterchangelog_coresmasterdetails_and_more.py
core/models_lib/: load.py  service_class.py
core/static/css/: main.css
core/static/js/swimlane/: Swap.js
core/templates/base/: base.html  index.html  navbar.html
core/templates/base/partials/: page-list-item.html  test-sproc-confirm.html
core/templates/patch-finish/: index.html
core/templates/patch-finish/content/: filters.html  job-gallery.html  part-gallery.html  popup-parts.html
core/templates/serialize/: index.html
core/templates/serialize/content/: banner.html  (+3 more)
core/templates/sort/: index.html
core/templates/swimlane/: index.html  navbar.html
cores_hub/: asgi.py  settings.py  urls.py  wsgi.py
db_mgmt/: deploy_changes.sh  installing_sqlpackage.txt  notes.txt  todo.txt
db_mgmt/CoresHubDB/: CoresHubDB.sqlproj
db_mgmt/CoresHubDB/Sproc/: MoveSerializeTransact.sql  TestUpdateUser.sql
static/js/: alpineHelpers.js
test_files/: cores_master_details.csv  inspection_master.csv  patch_master.csv  serialize_now.csv  sort_master.csv
(+26 files in other folders)
